...
                                <color key="backgroundColor" red="0.0" green="0.58039215690000001" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="3P6-gV-lZd"/>
                                    <constraint firstAttribute="width" constant="300" id="bRl-Kx-fIQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="loginButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zFC-kt-s4p"/>
                                </connections>
                            </button>
...
                                    </button>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="AI5-as-EFA">
                                <rect key="frame" x="37.666666666666657" y="371" width="300" height="70"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Email Address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aDM-Uu-Vuq" customClass="FloatingLabelInput" customModule="NIBM_Events" customModuleProvider="ta
                                        <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
                                        <attributedString key="attributedText"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mrb-ng-jsz" customClass="FloatingLabelInput" customModule="NIBM_Events" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="40" width="300" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="0Gn-AQ-Yhr"/>
                                            <constraint firstAttribute="width" constant="300" id="lPV-yE-LG2"/>
                                        </constraints>
                                        <nil key="textColor"/>
...
                            <constraint firstItem="RJR-Kb-P3o" firstAttribute="trailing" secondItem="mAl-E5-En5" secondAttribute="trailing" id="OVV-55-Kq6"/>
                            <constraint firstItem="RJR-Kb-P3o" firstAttribute="leading" secondItem="mAl-E5-En5" secondAttribute="leading" id="WCN-3G-WxZ"/>
                            <constraint firstItem="mAl-E5-En5" firstAttribute="bottom" secondItem="RJR-Kb-P3o" secondAttribute="bottom" id="u4t-ZO-RMh"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="mAl-E5-En5"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="My Profile" id="kZF-QV-5io"/>
                    <connections>
                        <outlet property="contactNumberTextLabel" destination="bOb-fl-03h" id="hg4-hs-dLC"/>
                        <outlet property="nameTextlabel" destination="HF6-jT-50V" id="hfk-To-JK2"/>
                        <outlet property="profileImage" destination="tHV-wW-Mwe" id="3ag-Wx-qUr"/>
                        <outlet property="signOutButton" destination="yBe-iZ-Too" id="e7l-ZQ-5am"/>
                    </connections>
...
