...
                                                                </button>
                                                            </subviews>
                                                        </stackView>
                                                        <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="08y-56-Aja">
                                                            <rect key="frame" x="0.66666666666665719" y="43" width="298" height="30"/>
                                                            <subviews>
                                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Comment" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WWc-Dk-Ro8">
                                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="height" constant="30" id="0p5-yv-oV0"/>
                                                                        <constraint firstAttribute="width" constant="250" id="FdZ-w7-fTb"/>
                                                                    </constraints>
                                                                    <nil key="textColor"/>
...
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rp7-Fg-m0N">
                                                                    <rect key="frame" x="258" y="0.0" width="40" height="30"/>
                                                                    <constraints>
                                                                        <constraint firstAttribute="height" constant="30" id="Zol-pJ-SyU"/>
                                                                        <constraint firstAttribute="width" constant="40" id="o8g-b8-bTD"/>
                                                                    </constraints>
                                                                    <state key="normal" title="Post"/>
                                                                    <connections>
                                                                        <action selector="postButtonAction:" destination="9ir-cJ-tUO" eventType="touchUpInside" id="7bs-ZT-ldQ"/>
                                                                    </connections>
                                                                </button>
                                                            </subviews>
                                                        </stackView>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nWX-h6-gJn">
                                                        <rect key="frame" x="300" y="0.0" width="30" height="30"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="30" id="7TJ-6a-VQ8"/>
                                                            <constraint firstAttribute="width" constant="30" id="n1a-Yn-tJ9"/>
                                                        </constraints>
                                                        <state key="normal" title="Close" image="CloseButtonIcone"/>
                                                        <connections>
                                                            <action selector="closeButtonAction:" destination="qcG-R4-hVI" eventType="touchUpInside" id="mFj-qc-uta"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
...
